feat: Add multiplatform support and refactor project structure

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,5 +10,14 @@ kotlin.code.style=official
 android.useAndroidX=true
 android.nonTransitiveRClass=true
 
-#Compose
+# iOS
 org.jetbrains.compose.experimental.uikit.enabled=true
+
+# Web
+org.jetbrains.compose.experimental.jscanvas.enabled=true
+
+# KMP
+kotlin.mpp.enableCInteropCommonization=true
+
+# App version
+version=1.0.0
