feat(desktop): windows端打包

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,9 @@ org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 # KMP
 kotlin.mpp.enableCInteropCommonization=true
+kotlin.native.ignoreDisabledTargets=true
 
 # App version
 version=1.0.0
+
+org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
