--- a/gradle.properties
+++ b/gradle.properties
@@ -23,4 +23,4 @@ kotlin.native.ignoreDisabledTargets=true
 # App version
 version=1.0.0
 
-org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
+#org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
