--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,6 +44,9 @@ accompanist-systemUIController = "0.36.0"
 androidx-lifecycle = "2.8.4"
 androidx-navigation = "2.8.0-alpha10"
 napier="2.7.1"
+richtext="1.0.0-alpha02"
+richedit="1.0.0-rc10"
+reveal="3.2.0"
 
 [libraries]
 #UI框架相关
@@ -68,6 +71,13 @@ androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navi
 accompanist-systemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemUIController" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+#没有iOS的富文本处理
+#richtext-core={ module ="com.halilibo.compose-richtext:richtext-ui",version.ref="richtext"}
+#richtext-material={ module="com.halilibo.compose-richtext:richtext-ui-material",version.ref="richtext"}
+#richtext-material3={ module="com.halilibo.compose-richtext:richtext-ui-material3",version.ref="richtext"}
+rich-editor={ module="com.mohamedrejeb.richeditor:richeditor-compose",version.ref="richedit"}
+
+reveal={module="com.svenjacobs.reveal:reveal-core",version.ref="reveal"}
 
 #Android特有
 androidx-perference = { module = "androidx.preference:preference-ktx", version.ref = "perference" }
