--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ agp = "8.5.0"
 kotlin = "2.0.20"
 compose-compiler = "1.5.4"
 compose = "1.7.6"
-kotlinxDatetime = "0.6.1"
+kotlinxDatetime = "0.6.0"
 compose-material3 = "1.3.1"
 activityCompose = "1.9.2"
 compose-plugin= "1.7.3"
@@ -26,7 +26,8 @@ coil3 = "3.0.0-alpha10"
 windowSize = "0.5.0"
 sheet = "0.1.2"
 pagingCommonVersion = "3.3.0-alpha02-0.5.1"
-precompose = "1.6.0"
+precompose = "1.6.2"
+#precompose = "1.7.0-alpha03" 预发布
 okio = "3.9.0"
 bugly = "4.1.9"
 file = "0.6.1"
@@ -93,7 +94,8 @@ okio-core = { module = "com.squareup.okio:okio", version.ref = "okio" }
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 logger-kermit = { module = "co.touchlab:kermit", version.ref = "kermit" }
 multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
-multiplatformSettings-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "settings" }
+multiplatform-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "settings" }
+multiplatform-datastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "settings" }
 
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
