feat[机器对话]: desktop端可显示流文本，解决注解单例崩溃

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,8 +26,8 @@ coil3 = "3.0.0-alpha10"
 windowSize = "0.5.0"
 sheet = "0.1.2"
 pagingCommonVersion = "3.3.0-alpha02-0.5.1"
-precompose = "1.6.2"
-#precompose = "1.7.0-alpha03" 预发布
+#precompose = "1.6.2"
+precompose = "1.7.0-alpha01" #预发布
 okio = "3.9.0"
 bugly = "4.1.9"
 file = "0.6.1"
