--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,4 @@ kotlin.native.ignoreDisabledTargets=true
 version=1.0.0
 
 #org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
+org.gradle.java.home=C\:/Users/260439/.jdks/corretto-21.0.6/
