--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -47,7 +47,7 @@ androidx-lifecycle = "2.8.4"
 androidx-navigation = "2.8.0-alpha10"
 napier="2.7.1"
 richtext="1.0.0-alpha02"
-richedit="1.0.0-rc10"
+richedit="1.0.0-rc11"
 reveal="3.2.0"
 capture="0.3.0"
 uiGraphicsAndroid = "1.7.8"
@@ -76,9 +76,11 @@ accompanist-systemUIController = { module = "com.google.accompanist:accompanist-
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 #没有iOS的富文本处理
-#richtext-core={ module ="com.halilibo.compose-richtext:richtext-ui",version.ref="richtext"}
-#richtext-material={ module="com.halilibo.compose-richtext:richtext-ui-material",version.ref="richtext"}
-#richtext-material3={ module="com.halilibo.compose-richtext:richtext-ui-material3",version.ref="richtext"}
+richtext-core={ module ="com.halilibo.compose-richtext:richtext-ui",version.ref="richtext"}
+richtext-mark={ module ="com.halilibo.compose-richtext:richtext-commonmark",version.ref="richtext"}
+richtext-markdown={ module ="com.halilibo.compose-richtext:richtext-markdown",version.ref="richtext"}
+richtext-material={ module="com.halilibo.compose-richtext:richtext-ui-material",version.ref="richtext"}
+richtext-material3={ module="com.halilibo.compose-richtext:richtext-ui-material3",version.ref="richtext"}
 rich-editor={ module="com.mohamedrejeb.richeditor:richeditor-compose",version.ref="richedit"}
 
 reveal={module="com.svenjacobs.reveal:reveal-core",version.ref="reveal"}
