build(git): 忽略windows和mac的提交冲突，本地jdk地址不同

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ captures
 local.properties
 xcuserdata
 .kotlin/
+gradle.properties
 # 忽略 .kotlin 目录
 #git rm -r --cached .kotlin
 #git commit -m "Ignore .kotlin folder"
