--- a/gradle.properties
+++ b/gradle.properties
@@ -23,6 +23,7 @@ kotlin.native.ignoreDisabledTargets=true
 # App version
 version=1.0.0
 
-#mac?????21?window?????17
+#mac jdk21 window 21
 #org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
-org.gradle.java.home=C\:/Users/260439/.jdks/corretto-21.0.6/
+#org.gradle.java.home=C\:/Users/260439/.jdks/corretto-21.0.6/
+org.gradle.java.home=/Users/jasonmac/Library/Java/JavaVirtualMachines/corretto-21.0.6/Contents/Home
