--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ androidLifecycleVersion = "2.2.0"
 stately = "2.0.6"
 ktor = "3.1.0"
 uuid = "0.8.4"
-settings = "1.1.1"
+settings = "1.3.0"
 mokopermission = "0.18.1"
 perference = "1.2.0"
 permissionX = "1.8.0"
@@ -102,6 +102,7 @@ datastore-preferences = { module = "androidx.datastore:datastore-preferences", v
 multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
 multiplatform-coroutines = { module = "com.russhwolf:multiplatform-settings-coroutines", version.ref = "settings" }
 multiplatform-datastore = { module = "com.russhwolf:multiplatform-settings-datastore", version.ref = "settings" }
+multiplatform-serialization = { module = "com.russhwolf:multiplatform-settings-serialization", version.ref = "settings" }
 
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
