--- a/iosApp/iosApp/Info.plist
+++ b/iosApp/iosApp/Info.plist
@@ -2,6 +2,42 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+<key>NSAppTransportSecurity</key>
+<dict>
+<key>NSAllowsArbitraryLoads</key>
+<true/>
+</dict>
+
+    <key>NSCameraUsageDescription</key>
+	<string>请允许访问你的相机</string>
+
+<key>NSPhotoLibraryAddUsageDescription</key>
+<string>请允许保存图片到图库</string>
+
+<key>NSPhotoLibraryUsageDescription</key>
+<string>请允许访问你的图库</string>
+
+<key>NSExtensionFileProviderOnlyVisibleInParentApplication</key>
+	<string>Just for file</string>
+
+	<key>CADisableMinimumFrameDurationOnPhone</key><true/>
+
+<key>CFBundleDisplayName</key>
+<string>Chat-Bot</string>
+
+<key>UISupportedInterfaceOrientations</key>
+<array>
+    <string>UIInterfaceOrientationPortrait</string>
+</array>
+<key>UISupportedInterfaceOrientations~ipad</key>
+<array>
+    <string>UIInterfaceOrientationPortrait</string>
+    <string>UIInterfaceOrientationPortraitUpsideDown</string>
+    <string>UIInterfaceOrientationLandscapeLeft</string>
+    <string>UIInterfaceOrientationLandscapeRight</string>
+</array>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
