--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
 agp = "8.5.0"
 #ksp = "2.0.20-1.0.24"
-kotlin ="2.1.0"
+kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 compose-compiler = "1.5.4"
-java="21"
+java = "21"
 compose = "1.7.6"
 kotlinxDatetime = "0.6.0"
 compose-material3 = "1.3.1"
 activityCompose = "1.9.2"
-compose-plugin= "1.7.3"
+compose-plugin = "1.7.3"
 androidAppCompatVersion = "1.7.0"
 sqlDelight = "2.0.2"
 buildkonfigGradlePlugin = "0.15.1"
@@ -23,7 +23,7 @@ settings = "1.3.0"
 mokopermission = "0.18.1"
 perference = "1.2.0"
 permissionX = "1.8.0"
-coil3 = "3.0.0-alpha10"
+coil3 = "3.1.0"
 windowSize = "0.5.0"
 sheet = "0.1.2"
 pagingCommonVersion = "3.3.0-alpha02-0.5.1"
@@ -36,22 +36,23 @@ coroutines-core = "1.10.1"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.1"
 lifecycleRuntimeKtx = "2.7.0"
-coreKtx = "1.10.1"
+#coreKtx = "1.10.1"
+coreKtx="1.15.0"
 jna = "5.15.0"
-toast4j="0.2.0"
+toast4j = "0.2.0"
 kotlinxCoroutinesSwing = "1.10.1"
 kotlinxSerializationJson = "1.7.3"
-desugar_jdk_libs="2.1.3"
+desugar_jdk_libs = "2.1.3"
 accompanist-systemUIController = "0.36.0"
 androidx-lifecycle = "2.8.4"
 androidx-navigation = "2.8.0-alpha10"
-napier="2.7.1"
-richtext="1.0.0-alpha02"
-richedit="1.0.0-rc11"
-reveal="3.2.0"
-capture="0.3.0"
-ktoken="0.3.0"
-openai-client="4.0.1"
+napier = "2.7.1"
+richtext = "1.0.0-alpha02"
+richedit = "1.0.0-rc11"
+reveal = "3.2.0"
+capture = "0.3.0"
+ktoken = "0.3.0"
+openai-client = "4.0.1"
 
 [libraries]
 #UI框架相关
@@ -77,15 +78,15 @@ accompanist-systemUIController = { module = "com.google.accompanist:accompanist-
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 #没有iOS的富文本处理
-richtext-core={ module ="com.halilibo.compose-richtext:richtext-ui",version.ref="richtext"}
-richtext-mark={ module ="com.halilibo.compose-richtext:richtext-commonmark",version.ref="richtext"}
-richtext-markdown={ module ="com.halilibo.compose-richtext:richtext-markdown",version.ref="richtext"}
-richtext-material={ module="com.halilibo.compose-richtext:richtext-ui-material",version.ref="richtext"}
-richtext-material3={ module="com.halilibo.compose-richtext:richtext-ui-material3",version.ref="richtext"}
-rich-editor={ module="com.mohamedrejeb.richeditor:richeditor-compose",version.ref="richedit"}
+richtext-core = { module = "com.halilibo.compose-richtext:richtext-ui", version.ref = "richtext" }
+richtext-mark = { module = "com.halilibo.compose-richtext:richtext-commonmark", version.ref = "richtext" }
+richtext-markdown = { module = "com.halilibo.compose-richtext:richtext-markdown", version.ref = "richtext" }
+richtext-material = { module = "com.halilibo.compose-richtext:richtext-ui-material", version.ref = "richtext" }
+richtext-material3 = { module = "com.halilibo.compose-richtext:richtext-ui-material3", version.ref = "richtext" }
+rich-editor = { module = "com.mohamedrejeb.richeditor:richeditor-compose", version.ref = "richedit" }
 
-reveal={module="com.svenjacobs.reveal:reveal-core",version.ref="reveal"}
-capture-shot={ module="ir.mahozad.multiplatform:comshot",version.ref="capture"}
+reveal = { module = "com.svenjacobs.reveal:reveal-core", version.ref = "reveal" }
+capture-shot = { module = "ir.mahozad.multiplatform:comshot", version.ref = "capture" }
 
 #Android特有
 androidx-perference = { module = "androidx.preference:preference-ktx", version.ref = "perference" }
@@ -136,11 +137,11 @@ sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "s
 #ktor 3.0网络连接
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
-ktor-client-curl= { module = "io.ktor:ktor-client-curl", version.ref = "ktor" }
-ktor-client-auth= { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+ktor-client-curl = { module = "io.ktor:ktor-client-curl", version.ref = "ktor" }
+ktor-client-auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
 #ktor engines
-ktor-client-apache={module="io.ktor:ktor-client-apache",version.ref="ktor"}
-ktor-client-jetty={module="io.ktor:ktor-client-jetty",version.ref="ktor"}
+ktor-client-apache = { module = "io.ktor:ktor-client-apache", version.ref = "ktor" }
+ktor-client-jetty = { module = "io.ktor:ktor-client-jetty", version.ref = "ktor" }
 ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
 ktor-client-ios = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
@@ -148,12 +149,15 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktoken = { group = "com.aallam.ktoken", name = "ktoken", version.ref = "ktoken" }
-openai-client={ module="com.aallam.openai:openai-client",version.ref="openai-client"}
+openai-client = { module = "com.aallam.openai:openai-client", version.ref = "openai-client" }
 
+#https://coil-kt.github.io/coil/getting_started/
 #coil3-core = { module = "io.coil-kt.coil3:coil", version.ref = "coil3" }
 coil3-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
 coil3-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil3" }
-coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor2", version.ref = "coil3" }
+coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil3" }
+#coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor2", version.ref = "coil3" }
+#video/gif只有Android版
 #coil3-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coil3" }
 #coil3-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil3" }
 
