feat(相机): 相机拍摄

--- a/gradle.properties
+++ b/gradle.properties
@@ -16,6 +16,7 @@ org.jetbrains.compose.experimental.uikit.enabled=true
 # Web
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 
+
 # KMP
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.ignoreDisabledTargets=true
@@ -25,5 +26,5 @@ version=1.0.0
 
 #mac jdk21 window 21
 #org.gradle.java.home=C\:/Users/260439/.jdks/corretto-17.0.14/
-#org.gradle.java.home=C\:/Users/260439/.jdks/corretto-21.0.6/
-org.gradle.java.home=/Users/jasonmac/Library/Java/JavaVirtualMachines/corretto-21.0.6/Contents/Home
+org.gradle.java.home=C\:/Users/260439/.jdks/corretto-21.0.6/
+#org.gradle.java.home=/Users/jasonmac/Library/Java/JavaVirtualMachines/corretto-21.0.6/Contents/Home
