--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,5 @@
 [versions]
 agp = "8.5.0"
-#ksp = "2.0.20-1.0.24"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 compose-compiler = "1.5.4"
@@ -32,7 +31,7 @@ precompose = "1.7.0-alpha01" #预发布
 okio = "3.9.0"
 bugly = "4.1.9"
 file = "0.10.0-beta01"
-coroutines-core = "1.10.1"
+coroutines = "1.10.1"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.1"
 lifecycleRuntimeKtx = "2.7.0"
@@ -40,7 +39,6 @@ lifecycleRuntimeKtx = "2.7.0"
 coreKtx = "1.15.0"
 jna = "5.15.0"
 toast4j = "0.2.0"
-kotlinxCoroutinesSwing = "1.10.1"
 kotlinxSerializationJson = "1.7.3"
 desugar_jdk_libs = "2.1.3"
 accompanist-systemUIController = "0.36.0"
@@ -55,7 +53,10 @@ ktoken = "0.3.0"
 openai-client = "4.0.1"
 #webview = "1.9.40"
 #kotlinx-browser = "0.3"
-peekaboo="0.5.2"
+peeboo="0.5.2"
+camerax = "1.3.2"
+accompanist="0.34.0"
+
 
 [libraries]
 #UI框架相关
@@ -63,8 +64,9 @@ buildkonfig-gradle-plugin = { module = "com.codingfeline.buildkonfig:buildkonfig
 core-splashscreen = { module = "androidx.core:core-splashscreen", version.ref = "coreSplashscreen" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-core = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines-core" }
-kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinxCoroutinesSwing" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "coroutines" }
+kotlinx-coroutines-guava = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-guava", version.ref = "coroutines" }
 kotlinX-serializationJson = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinxSerializationJson" }
 #kotlinx-browser = { module = "org.jetbrains.kotlinx:kotlinx-browser", version.ref = "kotlinx-browser" }
 
@@ -144,7 +146,7 @@ sqldelight-extensions = { module = "app.cash.sqldelight:coroutines-extensions", 
 sqlDelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelight" }
 primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqlDelight" }
 sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
-sqlite-web = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqlDelight" }
+#sqlite-web = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqlDelight" }
 
 #ktor 3.0网络连接
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
@@ -174,8 +176,12 @@ coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "co
 #coil3-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil3" }
 
 #相机、图册
-peekaboo-ui={ module ="io.github.onseok:peekaboo-ui",version.ref="peekaboo"}
-peekaboo-picker={ module ="io.github.onseok:peekaboo-image-picker",version.ref="peekaboo"}
+#peekaboo-ui={ module ="io.github.onseok:peekaboo-ui",version.ref="peekaboo"}
+#peekaboo-picker={ module ="io.github.onseok:peekaboo-image-picker",version.ref="peekaboo"}
+camera-camera2 = { group = "androidx.camera", name = "camera-camera2", version.ref = "camerax" }
+camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camerax" }
+camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "camerax" }
+accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
