--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -56,6 +56,7 @@ openai-client = "4.0.1"
 peeboo="0.5.2"
 camerax = "1.3.2"
 accompanist="0.34.0"
+com4j="2.3.0"
 
 
 [libraries]
@@ -78,6 +79,7 @@ kotlin-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.r
 toast4j = { module = "de.mobanisto:toast4j", version.ref = "toast4j" }
 jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
 jna-platform ={module="net.java.dev.jna:jna-platform",version.ref="jna"}
+com4j= { module ="net.java.dev.com4j:com4j",version.ref="com4j"}
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 androidx-lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 #androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
