--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -57,6 +57,7 @@ peeboo="0.5.2"
 camerax = "1.3.2"
 accompanist="0.34.0"
 com4j="2.3.0"
+compottie="2.0.0-rc04"
 
 
 [libraries]
@@ -133,6 +134,12 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 stately-common = { module = "co.touchlab:stately-common", version.ref = "stately" }
 
+#lottie动画
+compottie = { module = "io.github.alexzhirkevich:compottie", version.ref = "compottie" }
+compottie-dot = { module = "io.github.alexzhirkevich:compottie-dot", version.ref = "compottie" }
+compottie-network = { module = "io.github.alexzhirkevich:compottie-network", version.ref = "compottie" }
+compottie-resources = { module = "io.github.alexzhirkevich:compottie-resources", version.ref = "compottie" }
+
 #权限申请，兼容Android
 mokopermission = { module = "dev.icerock.moko:permissions", version.ref = "mokopermission" }
 mokopermission-compose = { module = "dev.icerock.moko:permissions-compose", version.ref = "mokopermission" }
@@ -173,14 +180,12 @@ ktoken = { group = "com.aallam.ktoken", name = "ktoken", version.ref = "ktoken" 
 openai-client = { module = "com.aallam.openai:openai-client", version.ref = "openai-client" }
 
 #https://coil-kt.github.io/coil/getting_started/
-#coil3-core = { module = "io.coil-kt.coil3:coil", version.ref = "coil3" }
 coil3-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil3" }
 coil3-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil3" }
 coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil3" }
-#coil3-ktor = { module = "io.coil-kt.coil3:coil-network-ktor2", version.ref = "coil3" }
 #video/gif只有Android版
 #coil3-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coil3" }
-#coil3-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil3" }
+coil3-gif = { module = "io.coil-kt.coil3:coil-gif", version.ref = "coil3" }
 
 #相机、图册
 #peekaboo-ui={ module ="io.github.onseok:peekaboo-ui",version.ref="peekaboo"}
