--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,10 @@
 [versions]
-agp = "8.5.0"
+agp = "8.5.2"
 kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 compose-compiler = "1.5.4"
-java = "21"
-compose = "1.7.6"
+java = "17"
+compose = "1.8.1"
 kotlinxDatetime = "0.6.0"
 compose-material3 = "1.3.1"
 activityCompose = "1.9.2"
@@ -53,11 +53,15 @@ ktoken = "0.3.0"
 openai-client = "4.0.1"
 #webview = "1.9.40"
 #kotlinx-browser = "0.3"
-peeboo="0.5.2"
+peeboo = "0.5.2"
 camerax = "1.3.2"
-accompanist="0.34.0"
-com4j="2.3.0"
-compottie="2.0.0-rc04"
+accompanist = "0.34.0"
+com4j = "2.3.0"
+compottie = "2.0.0-rc04"
+langchain4j = "1.0.1-beta6"
+koog = "0.4.1"
+kembeding = "0.1.0"
+objectbox = "4.3.1"
 
 
 [libraries]
@@ -79,8 +83,8 @@ paging-compose = { module = "app.cash.paging:paging-compose-common", version.ref
 kotlin-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinxDatetime" }
 toast4j = { module = "de.mobanisto:toast4j", version.ref = "toast4j" }
 jna = { module = "net.java.dev.jna:jna", version.ref = "jna" }
-jna-platform ={module="net.java.dev.jna:jna-platform",version.ref="jna"}
-com4j= { module ="net.java.dev.com4j:com4j",version.ref="com4j"}
+jna-platform = { module = "net.java.dev.jna:jna-platform", version.ref = "jna" }
+com4j = { module = "net.java.dev.com4j:com4j", version.ref = "com4j" }
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 androidx-lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 #androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
@@ -111,9 +115,9 @@ permissionX-android = { module = "com.guolindev.permissionx:permissionx", versio
 
 #数据处理
 file-picker = { module = "io.github.vinceglb:filekit-core", version.ref = "file" }
-file-dialog= { module ="io.github.vinceglb:filekit-dialogs",version.ref="file"}
-file-dialog-compose= { module ="io.github.vinceglb:filekit-dialogs-compose",version.ref="file"}
-file-coil= { module ="io.github.vinceglb:filekit-coil",version.ref="file"}
+file-dialog = { module = "io.github.vinceglb:filekit-dialogs", version.ref = "file" }
+file-dialog-compose = { module = "io.github.vinceglb:filekit-dialogs-compose", version.ref = "file" }
+file-coil = { module = "io.github.vinceglb:filekit-coil", version.ref = "file" }
 okio-core = { module = "com.squareup.okio:okio", version.ref = "okio" }
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 multiplatform-settings = { module = "com.russhwolf:multiplatform-settings", version.ref = "settings" }
@@ -143,10 +147,10 @@ compottie-resources = { module = "io.github.alexzhirkevich:compottie-resources",
 #权限申请，兼容Android
 mokopermission = { module = "dev.icerock.moko:permissions", version.ref = "mokopermission" }
 mokopermission-compose = { module = "dev.icerock.moko:permissions-compose", version.ref = "mokopermission" }
-mokopermission-camera={module="dev.icerock.moko:permissions-camera",version.ref="mokopermission"}
-mokopermission-storage={module="dev.icerock.moko:permissions-storage",version.ref="mokopermission"}
-mokopermission-gallery={module="dev.icerock.moko:permissions-gallery",version.ref="mokopermission"}
-mokopermission-notifications={module="dev.icerock.moko:permissions-notifications",version.ref="mokopermission"}
+mokopermission-camera = { module = "dev.icerock.moko:permissions-camera", version.ref = "mokopermission" }
+mokopermission-storage = { module = "dev.icerock.moko:permissions-storage", version.ref = "mokopermission" }
+mokopermission-gallery = { module = "dev.icerock.moko:permissions-gallery", version.ref = "mokopermission" }
+mokopermission-notifications = { module = "dev.icerock.moko:permissions-notifications", version.ref = "mokopermission" }
 mokoMvvmCompose = { module = "dev.icerock.moko:mvvm-compose", version.ref = "mokoMvvmVersion" }
 precompose-navigator = { module = "moe.tlaster:precompose", version.ref = "precompose" }
 precompose-koin = { module = "moe.tlaster:precompose-koin", version.ref = "precompose" }
@@ -161,6 +165,16 @@ sqlDelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sq
 primitive-adapters = { module = "app.cash.sqldelight:primitive-adapters", version.ref = "sqlDelight" }
 sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelight" }
 #sqlite-web = { module = "app.cash.sqldelight:web-worker-driver", version.ref = "sqlDelight" }
+#多平台数据库
+objects-javax = { module = "io.objectbox:objectbox-java", version.ref = "objectbox" }
+objects-browser = { module = "io.objectbox:objectbox-android-objectbrowser", version.ref = "objectbox" }
+objects-android = { module = "io.objectbox:objectbox-android", version.ref = "objectbox" }
+objects-plguin = { module = "io.objectbox:objectbox-gradle-plugin", version.ref = "objectbox" }
+objects-window = { module = "io.objectbox:objectbox-windows", version.ref = "objectbox" }
+objects-linux = { module = "io.objectbox:objectbox-linux", version.ref = "objectbox" }
+objects-mac = { module = "io.objectbox:objectbox-macos", version.ref = "objectbox" }
+objects-kotlin={ module ="io.objectbox:objectbox-kotlin",version.ref="objectbox"}
+objects-processor = { module = "io.objectbox:objectbox-processor", version.ref = "objectbox" }
 
 #ktor 3.0网络连接
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
@@ -195,6 +209,19 @@ camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", versi
 camera-view = { group = "androidx.camera", name = "camera-view", version.ref = "camerax" }
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
 
+#langchain4j 快速调用大模型和外部工具   InMemoryEmbeddingStoreExample.java
+#https://docs.langchain4j.dev/integrations/web-search-engines/searchapi
+langchain-search = { group = "dev.langchain4j", name = "langchain4j-web-search-engine-searchapi", version.ref = "langchain4j" }
+langchain-rag = { group = "dev.langchain4j", name = "langchain4j-easy-rag", version.ref = "langchain4j" }
+langchain-document = { group = "dev.langchain4j", name = "langchain4j-document-parser-apache-tika", version.ref = "langchain4j" }
+langchain-embeddings = { group = "dev.langchain4j", name = "langchain4j-embeddings-all-minilm-l6-v2", version.ref = "langchain4j" }
+langchain-execution = { group = "dev.langchain4j", name = "langchain4j-code-execution-engine-judge0", version.ref = "langchain4j" }
+
+#使用本地模型进行AI服务
+#langchain-local-ai = { group = "dev.langchain4j", name = "langchain4j-local-ai", version.ref = "langchain4j" }
+koog-agents = { module = "ai.koog:koog-agents", version.ref = "koog" }
+
+
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 androidLibrary = { id = "com.android.library", version.ref = "agp" }
@@ -208,3 +235,5 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 buildKonfig = { id = "com.codingfeline.buildkonfig", version.ref = "buildkonfigGradlePlugin" }
 sqlDelight = { id = "app.cash.sqldelight", version.ref = "sqlDelight" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlinKapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+
