feat(agent): 适配下koog等库的版本

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,12 @@ kotlin = "2.1.0"
 ksp = "2.1.0-1.0.29"
 compose-compiler = "1.5.4"
 java = "17"
-compose = "1.8.1"
+compose = "1.8.2"
 kotlinxDatetime = "0.6.0"
 compose-material3 = "1.3.1"
 activityCompose = "1.9.2"
-compose-plugin = "1.7.3"
+#这里有个大坑，compose的版本影响对应的渲染引擎版本，如果引入第三方UI框架版本差别太大会导致编译报错
+compose-plugin = "1.8.2"
 androidAppCompatVersion = "1.7.0"
 sqlDelight = "2.0.2"
 buildkonfigGradlePlugin = "0.15.1"
@@ -26,16 +27,14 @@ coil3 = "3.1.0"
 windowSize = "0.5.0"
 sheet = "0.1.2"
 pagingCommonVersion = "3.3.0-alpha02-0.5.1"
-#precompose = "1.6.2"
 precompose = "1.7.0-alpha01" #预发布
 okio = "3.9.0"
 bugly = "4.1.9"
-file = "0.10.0-beta01"
+file = "0.11.0"
 coroutines = "1.10.1"
 coreSplashscreen = "1.0.1"
 datastorePreferences = "1.1.1"
 lifecycleRuntimeKtx = "2.7.0"
-#coreKtx = "1.10.1"
 coreKtx = "1.15.0"
 jna = "5.15.0"
 toast4j = "0.2.0"
@@ -46,7 +45,7 @@ androidx-lifecycle = "2.8.4"
 androidx-navigation = "2.8.0-alpha10"
 napier = "2.7.1"
 richtext = "1.0.0-alpha02"
-richedit = "1.0.0-rc11"
+richedit = "1.0.0-rc13"
 reveal = "3.2.0"
 capture = "0.3.0"
 ktoken = "0.3.0"
@@ -169,7 +168,7 @@ sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "s
 objects-javax = { module = "io.objectbox:objectbox-java", version.ref = "objectbox" }
 objects-browser = { module = "io.objectbox:objectbox-android-objectbrowser", version.ref = "objectbox" }
 objects-android = { module = "io.objectbox:objectbox-android", version.ref = "objectbox" }
-objects-plguin = { module = "io.objectbox:objectbox-gradle-plugin", version.ref = "objectbox" }
+objects-plugin = { module = "io.objectbox:objectbox-gradle-plugin", version.ref = "objectbox" }
 objects-window = { module = "io.objectbox:objectbox-windows", version.ref = "objectbox" }
 objects-linux = { module = "io.objectbox:objectbox-linux", version.ref = "objectbox" }
 objects-mac = { module = "io.objectbox:objectbox-macos", version.ref = "objectbox" }
