--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,7 +5,7 @@ ksp = "2.1.0-1.0.29"
 compose-compiler = "1.5.4"
 java = "17"
 compose = "1.8.2"
-kotlinxDatetime = "0.6.0"
+kotlinxDatetime = "0.6.2"
 compose-material3 = "1.3.1"
 activityCompose = "1.9.2"
 #这里有个大坑，compose的版本影响对应的渲染引擎版本，如果引入第三方UI框架版本差别太大会导致编译报错
@@ -17,7 +17,7 @@ koin = "4.0.0"
 mokoMvvmVersion = "0.16.1"
 androidLifecycleVersion = "2.2.0"
 stately = "2.0.6"
-ktor = "3.1.0"
+ktor = "3.2.3"
 uuid = "0.8.4"
 settings = "1.3.0"
 mokopermission = "0.19.1"
@@ -44,6 +44,7 @@ accompanist-systemUIController = "0.36.0"
 androidx-lifecycle = "2.8.4"
 androidx-navigation = "2.8.0-alpha10"
 napier = "2.7.1"
+kermit="2.0.8"
 richtext = "1.0.0-alpha02"
 richedit = "1.0.0-rc13"
 reveal = "3.2.0"
@@ -56,7 +57,7 @@ peeboo = "0.5.2"
 camerax = "1.3.2"
 accompanist = "0.34.0"
 com4j = "2.3.0"
-compottie = "2.0.0-rc04"
+compottie = "2.0.0"
 langchain4j = "1.0.1-beta6"
 koog = "0.4.1"
 kembeding = "0.1.0"
@@ -88,7 +89,9 @@ desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref 
 androidx-lifecycle-viewmodel-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle" }
 #androidx-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 accompanist-systemUIController = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist-systemUIController" }
+#不维护了，后续会废弃掉
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
+kermit ={ module ="co.touchlab:kermit",version.ref="kermit"}
 stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
 #https://github.com/KevinnZou/compose-webview-multiplatform
 #compose-webviews = { module = "io.github.kevinnzou:compose-webview-multiplatform", version.ref = "webview" }
@@ -137,7 +140,7 @@ koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin" }
 stately-common = { module = "co.touchlab:stately-common", version.ref = "stately" }
 
-#lottie动画
+#lottie动画 https://github.com/alexzhirkevich/compottie
 compottie = { module = "io.github.alexzhirkevich:compottie", version.ref = "compottie" }
 compottie-dot = { module = "io.github.alexzhirkevich:compottie-dot", version.ref = "compottie" }
 compottie-network = { module = "io.github.alexzhirkevich:compottie-network", version.ref = "compottie" }
